--- a/documents/paper.Rmd
+++ b/documents/paper.Rmd
@@ -29,9 +29,9 @@ BM: Among historians of archaeology there are two major phases in  ‘critical h
 
 - background to Word embeddings
 
-LW: Word embeddings are an effective way to analyze the temporal changes of any target word, which is represented by a group of words sharing close semantic relations with it. Word embeddings needs to be trained on a corpus, a collection of texts, for later calculation of the relations between words according to their distance in texts. This method allows us to explore the changing meaning of words of interest accompanied with their social or cultural background to understand the historical trend. For example, @Garg2018 explored changes in gender stereotypes and attitudes toward ethnic minorities in the 20th and 21st centuries in the US. They created word lists to represent gender and ethnicity as target words, and neutral words, such as adjectives and jobs, serving as indicators for stereotypes and attitudes. With word embeddings, they compared the association between each group and neutral words, where the strength of association is calculated by computing average embedding distance. They found there is a job bias for both gender and ethnic minority, such as and this bias is significantly correlated with the actual participation rates. In addition, there is bias towards  decreases of bias reflected by adjectives for ethnic minority and gender are associated with the women’s movement in the 1960s–1970s and Asian-American population growth in the 1960s and 1980s. This study demonstrates a successful application of word embeddings to detect social bias and correlate the findings with historical events.
+LW: Word embeddings are an effective way to analyze the temporal changes of any target word. A word embedding is a set of numbers that characterizes the meaning a word. Word embeddings are generated on a collection of texts, and can be used for calculation of the semantic relationships between words according to their distance in the texts. We can see how the meaning of a word shifts over time by visualizing the word embeddings and observing how the word moves through different spaces occupied by other words over time. When a word is in close proximity to other words, they have a high degree of semantic relatedness. This method allows for the exploration of the changing meaning of words in different contexts. For example, @Garg2018 explored changes in gender stereotypes and attitudes toward ethnic minorities in the 20th and 21st centuries in the US. They created custom lists of target words representing gender and ethnicity, and neutral words, such as adjectives and jobs, serving as indicators for stereotypes and attitudes. <!--where did their word embeddings come from, and what algorithm did they use? --> With word embeddings, they compared the association between each group <!--what is the group? we need to mention the groups before this sentence --> and neutral words, where the strength of association is calculated by computing average embedding distance. They found there is a job bias for both gender and ethnic minority, <!-- we really need a concrete example here --> this bias is significantly correlated with the actual job participation rates. In addition, there is a decreases in bias reflected by adjectives for ethnic minority and gender are associated with the women’s movement in the 1960s–1970s and Asian-American population growth in the 1960s and 1980s <!--"Another bias they identified was ... give the reader a concrete result from the paper  -->. This study demonstrates a successful application of word embeddings to detect social bias <!-- can we re-prhase to be about changing meanings of words? --> and correlate the findings with historical events.
 
-LW: Another example shows how word embeddings is effective by exploring the historical view on shared understandings of social classes in the 20th century in the US. @Kozlowski first compared the cultural dimensions created by word embeddings with a defined word lists showing cultural differences, such as rich-poor. The high association suggests that word embedding is a useful way to investigate people's views about social classes. They explored the relationship between dimensions of class identified in sociological theory, including morality, status, education, cultivation, gender, and employment. They found there is a high correlation between dimensions of education, cultivation, and morality, which corresponds to the owner/worker relation defined by classic Marxian. In addition, they found a stable relationships between different cultural dimensions of class over the century even there was a major shifts in the condition of economy, industry, and employment in the present day. This case study indicates the robustness of word embeddings as a method to examine the historical trend on social classes. 
+LW: Another example shows how word embeddings are effective <!-- Q: for what? A: for understanding semantic change over time --> by exploring the historical view on shared understandings of social classes in the 20th century in the US. @Kozlowski first compared the cultural dimensions created by word embeddings <!-- generated word embeddings from what data? and what algorithm did they use? --> with a defined word list reflecting socio-economic differences, such as 'rich', 'poor' and so on. The high association <!-- of what? between what? --> suggests that word embedding is a useful way to investigate people's views about social classes. They explored the relationship between dimensions of class identified in sociological theory, including morality, status, education, cultivation, gender, and employment. They found there is a high correlation <!-- of what? spell it out if this is about the word vectors, say --> between dimensions of education, cultivation, and morality, which corresponds to the owner/worker relation <!-- what relation? spell out more --> defined by classic Marxism. In addition, they found a stable relationship between different cultural dimensions of class over the century even though there was a major shift in the condition of economy, industry, and employment in the present day. This case study indicates the robustness of word embeddings as a method to examine historical trends of social classes. 
 
 # Methods
 
@@ -57,11 +57,17 @@ LW: The data for our study comes from the text of abstracts of oral and poster p
 
 LW: The PDFs for the years 1962-1994 contain images of pages, and after 2005 the PDFs are searchable text. We converted the page images from PDF to PNG files using ImageMagick software, and then used optical character recognition to extract text from the PNG files with the Tesseract package [@Kay2007]. We obtained an acceptable rate of 95-98% word-level OCR accuracy across the PDFs [@Holley2009]. After OCR, we removed punctuation, numbers, and stopwords, such as "the", "an", "a", due to their little or no semantic value for our research question, with the quanteda package [@Benoit2018]. 
 
-LW: We transformed the cleaned text into a document-feature matrix. This is a rectangular, tabular data structure where one row represents one PDF, and one column represents one word, also known as a feature. The cell values in this matrix are the frequencies of each feature for each PDF. We selected the features that occur at least three times across all PDFs for construction of a feature co-occurrence matrix. To create this matrix we calculated how often each feature appears with another. The co-occurrences is measured within a defined range, called a window, with the target feature in the middle position and context features next to it. Here we set the range to five that means five words before and after the target feature as the framework for calculation of co-occurrence counts. 
+LW: We transformed the cleaned text into a document-feature matrix. This is a rectangular, tabular data structure where one row represents one PDF, and one column represents one word, also known as a feature. The cell values in this matrix are the frequencies of each feature for each PDF. We selected the features that occur at least three times across all PDFs for construction of a feature co-occurrence matrix. To create this matrix we calculated how often each feature appears with another. The co-occurrences are measured within a defined range of surrounding words, known as a window, with the target feature in the middle position and context features before and after it. Here we set the range to five, meaning five words before and five words after the target feature, as our framework for calculating the co-occurrence counts. 
 
-LW: We trained the word embeddings on the co-occurrence matrix by GloVe model using the text2vec package [@Pennington2014; @Selivanov2016]. GloVe (Global Vectors) is a learning model that creates word vectors to represent semantic regularity and capture relationships between words [@Pennington2014; @Garg2018]. A word vector can be thought as a point with direction in a space, and it has multiple dimension associated with other word vectors. The distance between word vectors is measured by their various dimensions of difference, representing their semantic meanings. The difference is computed based on their co-occurrence probabilities converted from  co-occurrence matrix. This idea is similar to the concept of Principal Component Analysis (PCA). A dimension consists of words with its scale and direction can be analogous to a dimension generated by Principal Component Analysis. The words located on the two ends present the largest semantic distance represented by values. The more dimensions, the more accurate semantic meanings can be captured. In our case, we use 50 dimensions. 
+LW: We generated the word embeddings on the co-occurrence matrix using the GloVe algorithm from the text2vec package for R [@Pennington2014; @Selivanov2016]. GloVe (Global Vectors) is a unsupervised learning model that creates word vectors to represent semantic regularity and capture relationships between words [@Pennington2014; @Garg2018]. This idea is similar to the concept of Principal Component Analysis (PCA) that reduces a multi-dimensional dataset into a small number of new dimensions that usually capture most of the variation in the data. In this case, a word vector is similar to a principal component because it expresses the meaning of the word into a small set of numeric values. The more values in this set, or the more dimensions, the more accurately semantic meanings of a word can be captured. In our case, we use 50 dimensions. One of the most interesting qualities of word vectors is that simple arithmetic operations can reveal semantic relationships between words [@mikolov2013linguistic]. For example if we subtract the word vector values for 'man' from the word vector values for 'king', and add the word vector values for 'woman', the resulting vector will be very close to that of 'queen', such that we can literally compute queen = king - man + woman.
 
-LW: We then visualize the values across different dimensions to explore the historical trend of word meanings related to disciplinary change in archaeology. We created a word list, including theory, inference, mechanism, explanation, hypothesis, to explore how they changes in their meaning or use since 1962. We compare the word embeddings at a interval of ten years.
+<!-- one paragraph of plain and simple description of how Glove computes word vectors from co-oc matrix -->
+
+LW: We then visualize the values across different dimensions to explore the historical trend of word meanings related to disciplinary change in archaeology. 
+
+<!-- one paragraph of explaining how did we choose these words -->
+
+We created a word list, including theory, inference, mechanism, explanation, hypothesis, to explore how they changes in their meaning or use since 1962. We compare the word embeddings at a interval of ten years.
 
 
 
