--- a/documents/references.bib
+++ b/documents/references.bib
@@ -1,3 +1,11 @@
+@inproceedings{mikolov2013linguistic,
+  title={Linguistic regularities in continuous space word representations},
+  author={Mikolov, Tom{\'a}{\v{s}} and Yih, Wen-tau and Zweig, Geoffrey},
+  booktitle={Proceedings of the 2013 conference of the north american chapter of the association for computational linguistics: Human language technologies},
+  pages={746--751},
+  year={2013}
+}
+
 @book{trigger1989history,
   title={A history of archaeological thought},
   author={Trigger, Bruce G},
