editing background & methods

--- a/documents/paper.Rmd
+++ b/documents/paper.Rmd
@@ -29,7 +29,11 @@ BM: Among historians of archaeology there are two major phases in  ‘critical h
 
 - background to Word embeddings
 
-LW: Word embeddings are an effective way to analyze the temporal changes of any target word. A word embedding is a set of numbers that characterizes the meaning a word. Word embeddings are generated on a collection of texts, and can be used for calculation of the semantic relationships between words according to their distance in the texts. We can see how the meaning of a word shifts over time by visualizing the word embeddings and observing how the word moves through different spaces occupied by other words over time. When a word is in close proximity to other words, they have a high degree of semantic relatedness. This method allows for the exploration of the changing meaning of words in different contexts. For example, @Garg2018 explored changes in gender stereotypes and attitudes toward ethnic minorities in the 20th and 21st centuries in the US. They created custom lists of target words representing gender and ethnicity, and neutral words, such as adjectives and jobs, serving as indicators for stereotypes and attitudes. <!--where did their word embeddings come from, and what algorithm did they use? --> With word embeddings, they compared the association between each group <!--what is the group? we need to mention the groups before this sentence --> and neutral words, where the strength of association is calculated by computing average embedding distance. They found there is a job bias for both gender and ethnic minority, <!-- we really need a concrete example here --> this bias is significantly correlated with the actual job participation rates. In addition, there is a decreases in bias reflected by adjectives for ethnic minority and gender are associated with the women’s movement in the 1960s–1970s and Asian-American population growth in the 1960s and 1980s <!--"Another bias they identified was ... give the reader a concrete result from the paper  -->. This study demonstrates a successful application of word embeddings to detect social bias <!-- can we re-prhase to be about changing meanings of words? --> and correlate the findings with historical events.
+LW & BM: Word embeddings are increasingly being used by researchers in novel ways and have become popular in fields such as digital humanities and computational social science. A word embedding is a set of numbers representing a word that generated from a collection of texts. A word embedding characterizes the meaning a word and can be used to reveal latent semantic relationships between pairs of words, often measured by computing the cosine similarity of two embeddings [@antoniak2018evaluating]. The general idea is similar to the concept of Principal Component Analysis (PCA) that reduces a multi-dimensional dataset into a small number of new dimensions that typically capture most of the variation in the data. In this case, a word vector is similar to a principal component because it expresses the meaning of the word into a small set of numeric values (e.g. typically 50-250 values). This set is known as the word embedding or word vector, and we visualize vectors on a plot, the distance between two words estimates the similarity between the two words. One of the most interesting and useful qualities of word vectors is that simple arithmetic operations can reveal semantic relationships between words [@mikolov2013linguistic]. For example if we subtract the word vector values for 'man' from the word vector values for 'king', and add the word vector values for 'woman', the resulting vector will be very close to that of 'queen', such that we can literally compute 'king - man + woman' to get a vector that is approximately the same as 'queen'. 
+
+BM: Word embeddings have been used as evidence in studies of historical change in language and culture [@phillips2017intrinsic; @heuser2017word; @kulkarni2015statistically]. Semantic relations between words in a corpus are captured by the geometry of the vectors, so vectors can be compared with each other to find a word’s nearest neighbors [@giorcelli2019does].  Vectors can be compared across periods to examine the degree of change a word underwent from one-time interval to the next. For example, @hamilton2016diachronic use word embeddings to study semantic change in English over the last 200 years. They visualise how the word 'gay' shifted from meaning 'cheerful' or 'frolicsome' to referring to homosexuality, and the change in 'broadcast' from referring to 'casting out seeds' to 'transmitting signals', with the rise of television and radio in the early 20th century. @yao2018dynamic generate word embeddings on 99,872 articles from the New York Times, published between January 1990 and July 2016 and their results show major semantic shifts in their words of interest. For example, the word embeddings for the US president names, Obama and Trump, shift from their pre-presidential lives (Obama as a civil rights attorney and university professor; Trump as a real estate developer and TV personality) to the political sphere.
+
+LW:  Word embeddings  have also been used to track demographic and occupational social shifts and gender stereotypes. For example, @Garg2018 explored changes in gender stereotypes and attitudes toward ethnic minorities in the 20th and 21st centuries in the US. They created custom lists of target words representing gender and ethnicity, and neutral words, such as adjectives and jobs, serving as indicators for stereotypes and attitudes. <!--where did their word embeddings come from, and what algorithm did they use? --> With word embeddings, they compared the association between each group <!--what is the group? we need to mention the groups before this sentence --> and neutral words, where the strength of association is calculated by computing average embedding distance. They found there is a job bias for both gender and ethnic minority, <!-- we really need a concrete example here --> this bias is significantly correlated with the actual job participation rates. In addition, there is a decreases in bias reflected by adjectives for ethnic minority and gender are associated with the women’s movement in the 1960s–1970s and Asian-American population growth in the 1960s and 1980s <!--"Another bias they identified was ... give the reader a concrete result from the paper  -->. This study demonstrates a successful application of word embeddings to detect social bias <!-- can we re-prhase to be about changing meanings of words? --> and correlate the findings with historical events.
 
 LW: Another example shows how word embeddings are effective <!-- Q: for what? A: for understanding semantic change over time --> by exploring the historical view on shared understandings of social classes in the 20th century in the US. @Kozlowski first compared the cultural dimensions created by word embeddings <!-- generated word embeddings from what data? and what algorithm did they use? --> with a defined word list reflecting socio-economic differences, such as 'rich', 'poor' and so on. The high association <!-- of what? between what? --> suggests that word embedding is a useful way to investigate people's views about social classes. They explored the relationship between dimensions of class identified in sociological theory, including morality, status, education, cultivation, gender, and employment. They found there is a high correlation <!-- of what? spell it out if this is about the word vectors, say --> between dimensions of education, cultivation, and morality, which corresponds to the owner/worker relation <!-- what relation? spell out more --> defined by classic Marxism. In addition, they found a stable relationship between different cultural dimensions of class over the century even though there was a major shift in the condition of economy, industry, and employment in the present day. This case study indicates the robustness of word embeddings as a method to examine historical trends of social classes. 
 
@@ -59,11 +63,17 @@ LW: The PDFs for the years 1962-1994 contain images of pages, and after 2005 the
 
 LW: We transformed the cleaned text into a document-feature matrix. This is a rectangular, tabular data structure where one row represents one PDF, and one column represents one word, also known as a feature. The cell values in this matrix are the frequencies of each feature for each PDF. We selected the features that occur at least three times across all PDFs for construction of a feature co-occurrence matrix. To create this matrix we calculated how often each feature appears with another. The co-occurrences are measured within a defined range of surrounding words, known as a window, with the target feature in the middle position and context features before and after it. Here we set the range to five, meaning five words before and five words after the target feature, as our framework for calculating the co-occurrence counts. 
 
-LW: We generated the word embeddings on the co-occurrence matrix using the GloVe algorithm from the text2vec package for R [@Pennington2014; @Selivanov2016]. GloVe (Global Vectors) is a unsupervised learning model that creates word vectors to represent semantic regularity and capture relationships between words [@Pennington2014; @Garg2018]. This idea is similar to the concept of Principal Component Analysis (PCA) that reduces a multi-dimensional dataset into a small number of new dimensions that usually capture most of the variation in the data. In this case, a word vector is similar to a principal component because it expresses the meaning of the word into a small set of numeric values. The more values in this set, or the more dimensions, the more accurately semantic meanings of a word can be captured. In our case, we use 50 dimensions. One of the most interesting qualities of word vectors is that simple arithmetic operations can reveal semantic relationships between words [@mikolov2013linguistic]. For example if we subtract the word vector values for 'man' from the word vector values for 'king', and add the word vector values for 'woman', the resulting vector will be very close to that of 'queen', such that we can literally compute queen = king - man + woman.
+LW: We generated the word embeddings on the co-occurrence matrix using the GloVe algorithm from the text2vec package for R [@Pennington2014; @Selivanov2016]. GloVe (Global Vectors) is a unsupervised learning model that creates word vectors to represent semantic regularity and capture relationships between words [@Pennington2014; @Garg2018]. 
 
 <!-- one paragraph of plain and simple description of how Glove computes word vectors from co-oc matrix -->
 
-LW: We then visualize the values across different dimensions to explore the historical trend of word meanings related to disciplinary change in archaeology. 
+BM: One of the key practical challenges of studying temporal change in word embeddings is aligning the vectors representing the same words across multiple time periods. This is because the stochastic nature of word embeddings algorithms makes them generate representations that always have different coordinate systems and thus one set of embeddings are are not directly comparable to another set generated on a different corpus (i.e. from a different time period). Previous work generally follows a two-step pattern: first compute word embeddings in each time slice separately, then find a way to align the word embeddings across time slices. @kim2014temporal generated word embeddings for each time period by initializing them with the embeddings from the previous period. @kulkarni2015statistically compute a linear transformation of words between any two time slices by solving a n-dimensional least squares problem of k nearest neighbor words (where n is the embedding dimension). @zhang2016past similarly use a linear transformation between a base and target time slices, and compute the
+linear transformation using anchor words that does not change meaning between the two time slices (requiringprior knowledge of words that are static). @hamilton2016diachronic solves a n-dimensional Procrustes problem between every two adjacent time slices to perform the alignment. 
+
+
+
+
+We then visualize the values across different dimensions to explore the historical trend of word meanings related to disciplinary change in archaeology. 
 
 <!-- one paragraph of explaining how did we choose these words -->
 
