--- a/documents/references.bib
+++ b/documents/references.bib
@@ -1,3 +1,79 @@
+@article{zhang2016past,
+  title={The past is not a foreign country: Detecting semantically similar terms across time},
+  author={Zhang, Yating and Jatowt, Adam and Bhowmick, Sourav S and Tanaka, Katsumi},
+  journal={IEEE Transactions on Knowledge and Data Engineering},
+  volume={28},
+  number={10},
+  pages={2793--2807},
+  year={2016},
+  publisher={IEEE}
+}
+
+@article{kim2014temporal,
+  title={Temporal analysis of language through neural language models},
+  author={Kim, Yoon and Chiu, Yi-I and Hanaki, Kentaro and Hegde, Darshan and Petrov, Slav},
+  journal={arXiv preprint arXiv:1405.3515},
+  year={2014}
+}
+
+@inproceedings{kulkarni2015statistically,
+  title={Statistically significant detection of linguistic change},
+  author={Kulkarni, Vivek and Al-Rfou, Rami and Perozzi, Bryan and Skiena, Steven},
+  booktitle={Proceedings of the 24th International Conference on World Wide Web},
+  pages={625--635},
+  year={2015}
+}
+
+@inproceedings{yao2018dynamic,
+  title={Dynamic word embeddings for evolving semantic discovery},
+  author={Yao, Zijun and Sun, Yifan and Ding, Weicong and Rao, Nikhil and Xiong, Hui},
+  booktitle={Proceedings of the eleventh acm international conference on web search and data mining},
+  pages={673--681},
+  year={2018}
+}
+
+@inproceedings{hamilton2016diachronic,
+  title={Diachronic Word Embeddings Reveal Statistical Laws of Semantic Change},
+  author={Hamilton, William L and Leskovec, Jure and Jurafsky, Dan},
+  booktitle={Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  pages={1489--1501},
+  year={2016}
+}
+
+@techreport{giorcelli2019does,
+  title={Does Scientific Progress Affect Culture? A Digital Text Analysis},
+  author={Giorcelli, Michela and Lacetera, Nicola and Marinoni, Astrid},
+  year={2019},
+  institution={National Bureau of Economic Research}
+}
+
+
+@inproceedings{heuser2017word,
+  title={Word Vectors in the Eighteenth Century.},
+  author={Heuser, Ryan James},
+  booktitle={Digital Humanities, Montreal, Canada, August 8-11, 2017},
+  year={2017}
+}
+
+
+@inproceedings{phillips2017intrinsic,
+  title={Intrinsic and extrinsic evaluation of spatiotemporal text representations in twitter streams},
+  author={Phillips, Lawrence and Shaffer, Kyle and Arendt, Dustin and Hodas, Nathan and Volkova, Svitlana},
+  booktitle={Proceedings of the 2nd Workshop on Representation Learning for NLP},
+  pages={201--210},
+  year={2017}
+}
+
+@article{antoniak2018evaluating,
+  title={Evaluating the stability of embedding-based word similarities},
+  author={Antoniak, Maria and Mimno, David},
+  journal={Transactions of the Association for Computational Linguistics},
+  volume={6},
+  pages={107--119},
+  year={2018},
+  publisher={MIT Press}
+}
+
 @inproceedings{mikolov2013linguistic,
   title={Linguistic regularities in continuous space word representations},
   author={Mikolov, Tom{\'a}{\v{s}} and Yih, Wen-tau and Zweig, Geoffrey},
